--- a/css/registro.css
+++ b/css/registro.css
@@ -17,7 +17,7 @@ body{
     margin-top: 150px;
     margin-left: 550px;
     border-radius: 5px;
-    background: rgb(241, 169, 248);
+    background: red;
 }
 input[type="text"],
 input[type="password"]{
