--- a/css/registro.css
+++ b/css/registro.css
@@ -1,7 +1,7 @@
 body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    background: url(https://static.vecteezy.com/system/resources/previews/002/816/520/non_2x/modern-background-with-fluid-and-flower-shape-pink-purple-pastel-color-and-hand-draw-line-on-white-background-flat-minimal-design-with-copy-space-for-text-free-vector.jpg);
+    background-image: url(/img/pastel.JPG);
     background-size: cover;
     background-attachment: fixed;
     opacity: 0.7;
@@ -12,17 +12,18 @@ body{
 }
 .formulario{
     width: 300px;
-    border: 5px solid rgb(255, 163, 235);
+    border: 20px;
     height: 70%;
     margin-top: 150px;
     margin-left: 550px;
     border-radius: 5px;
-    background: red;
+    background: #f47e8e;
 }
 input[type="text"],
 input[type="password"]{
     padding: 5px;
     background: rgb(167, 223, 245);
+    border-radius: 10px;
 }
 .button{
     width: 100px;
