--- a/css/registro.css
+++ b/css/registro.css
@@ -4,25 +4,49 @@ body{
     background-image: url(https://i.pinimg.com/564x/3a/31/af/3a31af0cb0c3861315030ceec9eda854--cute-wallpaper-backgrounds-pastel-iphone-wallpaper.jpg);
     background-size: cover;
     background-attachment: fixed;
-    opacity: 0.7;
+    display: flex;
+    justify-content: center;
 }
 
 *{
     box-sizing: border-box;
+    
 }
-.formulario{
+
+/**caja**/
+.caja{
+    
+    position: relative;
+    top: 25vh;
     width: 300px;
-    border: 1px solid black;
     height: 70%;
-    margin-top: 150px;
-    margin-left: 550px;
-    border-radius: 10px;
-    background: #8cfca4;
+
 }
+
+.gradiante{
+    background-color: white;
+    background-clip: border-box;
+    border-radius: 10%;
+
+}
+
+.gradiante::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    margin: -10px;
+    border-radius:inherit;
+    background: linear-gradient(to right,#F59FBC,#FDC674);
+}
+
 input[type="text"],
 input[type="password"]{
     padding: 5px;
-    background: #cfffca;
+    background: rgba(252, 197, 115, 0.5);
     border-radius: 10px;
 }
 .button{
@@ -31,7 +55,7 @@ input[type="password"]{
     border-radius: 5px;
     margin-left: 85px;
     cursor: pointer;
-    background: #c999af;
+    background:#F59FBC;
 
 }
 
@@ -42,16 +66,17 @@ input[type="password"]{
 }
 h1{
     text-align: center;
-    color: black;
+    color: #583E3F;
     font-size: 40px;
 }
 .icon{
     min-width: 50px;
     text-align: center;
-    color: rgb(8, 8, 8);
+    color: #583E3F;
 }
 .button:hover{
-    background: cadetblue;
+    background:#583E3F;
+    color: #F59FBC;
 }
 p{
     text-align: center;
@@ -59,9 +84,9 @@ p{
 }
 .link{
     text-decoration: none;
-    color: blue;
+    color:#F59FBC;
     font-weight: 600;
 }
 .link:hover{
-    color: cadetblue;
+    color: #583E3F;
 }
